bump: CraftEngine to 26.5-SNAPSHOT+ use my own lib + fix for turkish language